--- a/.gitignore
+++ b/.gitignore
@@ -2,29 +2,19 @@
 .bundle
 
 # Ignore coverage reports
-backend/coverage
+coverage
 
 # Ignore all logfiles and tempfiles.
-backend/log/*
-backend/tmp/*
+log/*
 tmp/*
 # But keep the directories
-!backend/log/.keep
-!backend/tmp/.keep
+!log/.keep
+!tmp/.keep
 
 # Ignore uploaded files in development
-backend/storage/*
-
-*/yarn-error.log
+storage/*
 
 public/assets
 .byebug_history
-
-# Frontend
-node_modules
-frontend/.next
-frontend/cypress/screenshots/
-frontend/cypress/videos/
-frontend/coverage
 
 .DS_Store
